fixed not blurring the burger menu on highest resolutions

--- a/src/blocks/burger-menu/burger-menu.scss
+++ b/src/blocks/burger-menu/burger-menu.scss
@@ -18,7 +18,6 @@ $width-burger-menu: $step * 40;
   flex-direction: column;
   flex-grow: 1;
   background-color: $header-background-color;
-  z-index: 10;
   position: fixed;
 
   @media screen and (min-width: $screen-sm) and (max-width: $screen-md) {
@@ -26,6 +25,7 @@ $width-burger-menu: $step * 40;
     left: 0;
     box-shadow: $step * 2 0px 52px $color-box-shadow;
     width: 100%;
+    z-index: 4;
   }
   @media screen and (min-width: $screen-md) and (max-width: $screen-xl) {
     top: 0;
@@ -33,10 +33,12 @@ $width-burger-menu: $step * 40;
     width: $step * 40;
     box-shadow: $step * 2 0px 52px $color-box-shadow;
     height: 100vh;
+    z-index: 4;
   }
   @media screen and (min-width: $screen-xl) {
     width: $width-burger-menu;
     height: $step * 100;
+    z-index: 2;
   }
 
   &__menu {
