--- a/src/blocks/form-feedback/form.scss
+++ b/src/blocks/form-feedback/form.scss
@@ -14,7 +14,7 @@ $left-margin: 3 * $step;
   position: fixed;
   top: 0;
   background-color: $header-background-color;
-  //box-shadow: 16px 0px 52px $color-box-shadow;
+  z-index: 4;
 
   @media screen and (min-width: $screen-sm) and (max-width: $screen-md) {
     left: 0;
@@ -27,12 +27,10 @@ $left-margin: 3 * $step;
     box-shadow: 16px 0px 52px $color-box-shadow;
     height: 100vh;
     flex-direction: row;
-    //flex-direction: column;
   }
 
   &--visible {
     display: flex;
-    z-index: 3;
   }
 
   &--hidden {
