--- a/src/blocks/screen-blur/screen-blur.scss
+++ b/src/blocks/screen-blur/screen-blur.scss
@@ -8,7 +8,7 @@ $color-background: rgba(255, 255, 255, 0.96);
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 3;
   background-color: $color-background;
   width: 100vw;
   height: 100vh;
